k8s/simple-whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:     
      containers:
      - name : whoami
        image: jwilder/whoami
        imagePullPolicy: "Always"       
        ports:
        - containerPort: 8000
          protocol: TCP                                
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
