k8s/simple-whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: whoami
