k8s/simple-whoami/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:  
  name: whoami
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx   
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec: 
  rules:  
  - http:
      paths: 
      - path: /whoami/(.*)
        backend:
          serviceName: whoami
          servicePort: 80
